fix(user): some tweaks
