# openapi.yaml
@@ -3,34 +3,35 @@
 
 openapi: 3.0.3
 info:
-    title: Commission API
+    title: User API
     version: 0.0.1
 paths:
-    /v1/commissions:
+    /v1/domains:
         get:
             tags:
-                - Commission
-            operationId: Commission_ListCommission
+                - User
+            operationId: User_ListUserDomains
             responses:
                 "200":
                     description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/ListCommissionReply'
+                                $ref: '#/components/schemas/ListUserDomainsReply'
                 default:
                     description: Default error response
                     content:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    /v1/users/{parentId}/users/commissions:
+    /v1/domains/{id}:
         get:
             tags:
-                - Commission
-            operationId: Commission_ListCommissionByParent
+                - User
+            description: 获取域名
+            operationId: User_GetUserDomain
             parameters:
-                - name: parentId
+                - name: id
                   in: path
                   required: true
                   schema:
@@ -41,18 +42,158 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/ListCommissionByParentReply'
+                                $ref: '#/components/schemas/GetUserDomainReply'
                 default:
                     description: Default error response
                     content:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    /v1/users/{userId}/commission:
+        delete:
+            tags:
+                - User
+            operationId: User_DeleteDomain
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/DeleteDomainReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /v1/users:
         get:
             tags:
-                - Commission
-            operationId: Commission_GetUserCommission
+                - User
+            operationId: User_ListUser
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ListUserReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+        post:
+            tags:
+                - User
+            operationId: User_CreateUser
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/CreateUserRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/CreateUserReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /v1/users/{id}:
+        get:
+            tags:
+                - User
+            operationId: User_GetUser
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetUserReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+        delete:
+            tags:
+                - User
+            operationId: User_DeleteUser
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/DeleteUserReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+        patch:
+            tags:
+                - User
+            operationId: User_UpdateUser
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/UpdateUserRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/UpdateUserReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /v1/users/{userId}/domains:
+        get:
+            tags:
+                - User
+            operationId: User_ListUserDomainsByUserId
             parameters:
                 - name: userId
                   in: path
@@ -65,7 +206,36 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/GetUserCommissionReply'
+                                $ref: '#/components/schemas/ListUserDomainsByUserIdReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+        post:
+            tags:
+                - User
+            operationId: User_CreateUserDomain
+            parameters:
+                - name: userId
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/CreateUserDomainRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/CreateUserDomainReply'
                 default:
                     description: Default error response
                     content:
@@ -74,28 +244,86 @@ paths:
                                 $ref: '#/components/schemas/Status'
 components:
     schemas:
-        GetUserCommissionReply:
+        CreateUserDomainReply:
             type: object
             properties:
                 id:
                     type: string
                 userId:
                     type: string
-                totalCommission:
+                domain:
+                    type: string
+        CreateUserDomainRequest:
+            type: object
+            properties:
+                userId:
+                    type: string
+                domain:
+                    type: string
+        CreateUserReply:
+            type: object
+            properties:
+                id:
+                    type: string
+                username:
+                    type: string
+                level:
                     type: integer
                     format: int32
-                todayCommission:
+                sharePercent:
+                    type: number
+                    format: float
+                nickname:
+                    type: string
+                parentId:
+                    type: string
+        CreateUserRequest:
+            type: object
+            properties:
+                username:
+                    type: string
+                nickname:
+                    type: string
+                parentId:
+                    type: string
+                level:
                     type: integer
                     format: int32
-                settledCommission:
+                sharePercent:
+                    type: number
+                    format: float
+        DeleteDomainReply:
+            type: object
+            properties: {}
+        DeleteUserReply:
+            type: object
+            properties: {}
+        GetUserDomainReply:
+            type: object
+            properties:
+                id:
+                    type: string
+                userId:
+                    type: string
+                domain:
+                    type: string
+        GetUserReply:
+            type: object
+            properties:
+                id:
+                    type: string
+                username:
+                    type: string
+                level:
                     type: integer
                     format: int32
-                totalRegistrationCount:
-                    type: integer
-                    format: int32
-                todayRegistrationCount:
-                    type: integer
-                    format: int32
+                sharePercent:
+                    type: number
+                    format: float
+                nickname:
+                    type: string
+                parentId:
+                    type: string
         GoogleProtobufAny:
             type: object
             properties:
@@ -104,20 +332,62 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
-        ListCommissionByParentReply:
+        ListUserDomainsByUserIdReply:
             type: object
             properties:
-                commissions:
+                domains:
                     type: array
                     items:
-                        $ref: '#/components/schemas/GetUserCommissionReply'
-        ListCommissionReply:
+                        $ref: '#/components/schemas/ListUserDomainsByUserIdReply_Domain'
+        ListUserDomainsByUserIdReply_Domain:
             type: object
             properties:
-                commissions:
+                id:
+                    type: string
+                userId:
+                    type: string
+                domain:
+                    type: string
+        ListUserDomainsReply:
+            type: object
+            properties:
+                domains:
                     type: array
                     items:
-                        $ref: '#/components/schemas/GetUserCommissionReply'
+                        $ref: '#/components/schemas/ListUserDomainsReply_Domain'
+        ListUserDomainsReply_Domain:
+            type: object
+            properties:
+                id:
+                    type: string
+                userId:
+                    type: string
+                domain:
+                    type: string
+        ListUserReply:
+            type: object
+            properties:
+                users:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/ListUserReply_User'
+        ListUserReply_User:
+            type: object
+            properties:
+                id:
+                    type: string
+                username:
+                    type: string
+                nickname:
+                    type: string
+                parentId:
+                    type: string
+                level:
+                    type: integer
+                    format: int32
+                sharePercent:
+                    type: number
+                    format: float
         Status:
             type: object
             properties:
@@ -134,5 +404,34 @@ components:
                         $ref: '#/components/schemas/GoogleProtobufAny'
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+        UpdateUserReply:
+            type: object
+            properties:
+                id:
+                    type: string
+                username:
+                    type: string
+                level:
+                    type: integer
+                    format: int32
+                sharePercent:
+                    type: number
+                    format: float
+                nickname:
+                    type: string
+                parentId:
+                    type: string
+        UpdateUserRequest:
+            type: object
+            properties:
+                id:
+                    type: string
+                password:
+                    type: string
+                nickname:
+                    type: string
+                sharePercent:
+                    type: number
+                    format: float
 tags:
-    - name: Commission
+    - name: User
